--- a/wp-content/themes/makers/style.css
+++ b/wp-content/themes/makers/style.css
@@ -1880,8 +1880,27 @@ footer .address a {
 footer .address a:hover {
     color: #fff; }
 
+/* My changes */
+
 .hidden {
     display: none !important;
+}
+
+@media screen and (min-width: 40rem) {
+    .container .posts.members > li,
+    .container .posts.members > li:nth-child(2n+1){
+        clear: none !important;
+        margin-right: 3.57866% !important;
+    }
+}
+
+@media screen and (min-width: 53.75rem) {
+    .container .posts.members > li,
+    .container .posts.members > li:nth-child(4n),
+    .container .posts.members > li:nth-child(4n+1) {
+        margin-right: 3.16844% !important;
+        clear: none !important;
+    }
 }
 
 /*# sourceMappingURL=style.css.map */
