--- a/wp-content/themes/makers/style.css
+++ b/wp-content/themes/makers/style.css
@@ -40,7 +40,7 @@ h1,
 h2 {
     font-weight: 700; }
 
-p {
+p, #jobs-list {
     color: #3e3e3e;
     font-size: 16px;
     line-height: 1.5em; }
@@ -100,7 +100,8 @@ input[type="submit"] {
     vertical-align: top; }
 @media screen and (min-width: 53.75rem) {
     input[type="submit"] {
-        width: 20%; } }
+        width: 20%;
+        margin-left: -5px; } }
 input[type="submit"]:hover {
     background-color: #e33733; }
 
@@ -367,7 +368,7 @@ video {
     background: url("images/icons/icon-join-us.png") no-repeat right 10px center;
     height: 60px;
     padding-right: 45px; }
-@media only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (min--moz-device-pixel-ratio: 1.3), only screen and (-o-min-device-pixel-ratio: 1.3 / 1), only screen and (min-resolution: 125dpi), only screen and (min-resolution: 1.3dppx) {
+@media screen and (min-width: 40rem) {
     .header .navigation .main-navigation .join-us a {
         background-image: url("images/icon-join-us_2x.png");
         background-size: 26px 26px; } }
@@ -400,7 +401,7 @@ video {
     position: relative;
     width: 100%; }
 .hero img {
-    height: 16.875rem;
+    height: 25.3125rem;
     left: 0;
     position: relative;
     top: 0;
@@ -546,8 +547,7 @@ video {
     background: #3e3e3e;
     color: #fff;
     font-size: 14px;
-    width: 6.25rem;
-    margin-left: -5px; }
+    width: 6.25rem; }
 
 .about .bottom-container,
 .about-culture .bottom-container {
@@ -1185,14 +1185,18 @@ video {
     color: #3e3e3e;
     display: inline-block;
     transition: all .4s ease-in-out; }
-.grid .labs a:hover,
-.grid .makers a:hover,
 .grid .identify a:hover,
 .grid .test a:hover,
 .grid .build a:hover,
 .grid .scale a:hover {
     background-color: #262626;
     color: #fff; }
+.grid .labs a:hover {
+    background-color: #3BC999;
+}
+.grid .makers a:hover {
+    background-color: #E64D49;
+}
 .grid .labs,
 .grid .makers {
     height: auto;
