--- a/wp-content/themes/makers/style.css
+++ b/wp-content/themes/makers/style.css
@@ -372,7 +372,7 @@ video {
     padding-right: 45px; }
 @media screen and (min-width: 40rem) {
     .header .navigation .main-navigation .join-us a {
-        background: transparent url("images/icons/icon-join-us_2x.png") no-repeat scroll right 10px center;
+        background-image: url("images/icon-join-us_2x.png");
         background-size: 26px 26px; } }
 .header .navigation .main-navigation .join-us a:hover {
     background-color: #e64d49; }
@@ -415,7 +415,7 @@ video {
 .hero h2 {
     color: #fff;
     font-family: "Montserrat", "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 30px;
+    font-size: 28px;
     font-weight: bold;
     line-height: 1.4; }
 @media screen and (min-width: 40rem) {
