--- a/wp-content/themes/makers/style.css
+++ b/wp-content/themes/makers/style.css
@@ -204,7 +204,7 @@ video {
 .social .pinterest a {
     background-image: url("images/icons/social-pinterest.svg"); }
 .social .angellist a {
-    background-image: url("images/icons/social-angel.svg");
+    background-image: url("images/icons/social-angel.svg"); }
 
 .desktop-only {
     display: none; }
