--- a/origin/style.css
+++ b/origin/style.css
@@ -354,7 +354,7 @@ video {
         padding-right: 45px; }
         @media only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (min--moz-device-pixel-ratio: 1.3), only screen and (-o-min-device-pixel-ratio: 1.3 / 1), only screen and (min-resolution: 125dpi), only screen and (min-resolution: 1.3dppx) {
           .header .navigation .main-navigation .join-us a {
-            background-image: url("images/icon-join-us_2x.png");
+            background: transparent url("images/icons/icon-join-us_2x.png") no-repeat scroll right 10px center;
             background-size: 26px 26px; } }
         .header .navigation .main-navigation .join-us a:hover {
           background-color: #e64d49; }
@@ -397,7 +397,7 @@ video {
   .hero h2 {
     color: #fff;
     font-family: "Montserrat", "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 28px;
+    font-size: 30px;
     font-weight: bold;
     line-height: 1.4; }
     @media screen and (min-width: 40rem) {
