--- a/wp-content/themes/makers/style.css
+++ b/wp-content/themes/makers/style.css
@@ -865,7 +865,7 @@ video {
     .container .posts > li {
         float: left;
         display: block;
-        margin-right: 3.57866%;
+        margin-right: 1.78933%;
         width: 48.21067%; }
     .container .posts > li:nth-child(2n+1) {
         clear: left; } }
@@ -875,6 +875,8 @@ video {
         display: block; }
     .container .posts > li:nth-child(2n+1) {
         clear: none; }
+    .container .posts > li:nth-child(2n) {
+        margin-right: 0; }
     .container .posts > li:last-child {
         margin-right: 0; }
     .container .posts > li:nth-child(4n) {
