--- a/wp-content/themes/makers/style.css
+++ b/wp-content/themes/makers/style.css
@@ -855,28 +855,19 @@ video {
     float: left;
     display: block;
     width: 100%;
+    margin-bottom: 1.78933%;
     position: relative;
     text-align: center; }
-.container .posts > li:last-child {
-    margin-right: 0; }
 @media screen and (min-width: 40rem) {
     .container .posts > li {
         float: left;
         display: block;
         margin-right: 1.78933%;
-        width: 48.21067%; }
-    .container .posts > li:nth-child(2n+1) {
-        clear: left; } }
+        width: 48.21067%; } }
 @media screen and (min-width: 53.75rem) {
     .container .posts > li {
         float: left;
-        display: block; }
-    .container .posts > li:nth-child(2n+1) {
-        clear: none; }
-    .container .posts > li:last-child {
-        margin-right: 0; }
-    .container .posts > li:nth-child(4n+1) {
-        clear: left; } }
+        display: block; } }
 .container .posts > li h3 {
     margin: 0.3125rem 0 1.25rem 0;
     text-transform: uppercase; }
@@ -1103,7 +1094,8 @@ video {
     width: 100%; }
 @media screen and (min-width: 72.5rem) {
     .grid .grid-item-wide {
-        width: 50%; } }
+        width: 50%;
+        overflow: hidden; } }
 .grid .grid-text,
 .grid .grid-link {
     position: absolute;
@@ -1365,6 +1357,12 @@ video {
 
 .process > div {
     text-align: left; }
+.process .grid-item-wide img {
+    width: 100%;
+}
+@media screen and (min-width: 72.5rem) {
+.process .grid-item-wide img {
+    width: 120%; } }
 .process h3,
 .process h4 {
     font-size: 18px;
