--- a/wp-content/themes/makers/style2.css
+++ b/wp-content/themes/makers/style2.css
@@ -2,7 +2,7 @@
  * Content
  */
 
-.content {
+/*.content {
     max-width: 1140px;
     margin-left: auto;
     margin-right: auto;
@@ -17,7 +17,7 @@
 
 @media screen and (min-width: 53.75rem) {
 
-}
+}*/
 
 
 
