--- a/wp-content/themes/makers/style.css
+++ b/wp-content/themes/makers/style.css
@@ -577,7 +577,9 @@ video {
     content: "";
     display: table; }
 .container header {
-    max-width: 940px; }
+    max-width: 940px;
+    margin-left: auto;
+    margin-right: auto; }
 .container header h2 {
     font-size: 24px; }
 @media screen and (min-width: 40rem) {
