--- a/wp-content/themes/makers/style.css
+++ b/wp-content/themes/makers/style.css
@@ -576,10 +576,6 @@ video {
     clear: both;
     content: "";
     display: table; }
-.container header {
-    max-width: 940px;
-    margin-left: auto;
-    margin-right: auto; }
 .container header h2 {
     font-size: 24px; }
 @media screen and (min-width: 40rem) {
@@ -1801,6 +1797,10 @@ video {
     font-size: 1em;
     margin: 0; }
 
+/********* TEAM *********/
+.about-team {
+    padding-top: 5rem;
+}
 
 /********* JOBS LIST *********/
 #jobs-table-body {
