--- a/wp-content/themes/makers/style.css
+++ b/wp-content/themes/makers/style.css
@@ -403,7 +403,13 @@ video {
 .hero {
     overflow: hidden;
     position: relative;
-    width: 100%; }
+    width: 100%;
+    height: 25.3125rem;
+    background: center center no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover; }
 .hero img {
     height: 25.3125rem;
     left: 0;
@@ -411,6 +417,9 @@ video {
     top: 0;
     width: auto; }
 @media screen and (min-width: 40rem) {
+    .hero {
+        min-height: 600px;
+    }
     .hero img {
         width: auto;
         min-height: 600px; } }
