--- a/wp-content/themes/makers/style.css
+++ b/wp-content/themes/makers/style.css
@@ -227,11 +227,11 @@ video {
     top: 0;
     transition: background-color .4s ease-in-out;
     width: 100%;
-    z-index: 9999; }
+    z-index: 9999;
+    background-color: #3E3E3E; }
 @media screen and (min-width: 40rem) {
     .header {
-        padding: 0 0.625rem;
-        top: 0.9375rem; } }
+        padding: 0 0.625rem; } }
 .header.fixed {
     background-color: #262626;
     box-shadow: 0 3px 8px -4px rgba(0, 0, 0, 0.8);
@@ -1928,6 +1928,12 @@ footer .address a {
 footer .address a:hover {
     color: #fff;
 }
+
+/********* About -> Intro *********/
+.intro {
+    margin-top: 60px;
+}
+
 
 /********* EXTRA *********/
 
