--- a/wp-content/themes/makers/style.css
+++ b/wp-content/themes/makers/style.css
@@ -286,7 +286,7 @@ video {
         width: auto; } }
 .header .navigation ul li a:focus, .header .navigation ul li a:hover {
     background-color: transparent;
-    border-bottom: 1px solid #e64d49; }
+    background-color: rgba(0,0,0,0.2); }
 .header .navigation .main-navigation-button {
     overflow: hidden;
     text-indent: 101%;
@@ -366,7 +366,7 @@ video {
 .header .navigation .main-navigation.show {
     display: block; }
 .header .navigation .main-navigation a.active {
-    background-color: #e64d49; }
+    background-color: rgba(0,0,0,0.2); }
 .header .navigation .main-navigation .join-us a {
     background: url("images/icons/icon-join-us.png") no-repeat right 10px center;
     height: 60px;
@@ -375,7 +375,7 @@ video {
     .header .navigation .main-navigation .join-us a {
         background-size: 26px 26px; } }
 .header .navigation .main-navigation .join-us a:hover {
-    border-bottom: 1px solid #e64d49; }
+    background-color: rgba(0,0,0,0.2) }
 .header .social-container {
     display: none;
     float: right;
@@ -537,11 +537,9 @@ video {
     line-height: 60px;
     transition: all .4s ease-in-out; }
 .sub-navigation nav ul li a:hover {
-    background-color: #fff;
-    color: #e64d49; }
+    background: rgba(0,0,0,0.2); }
 .sub-navigation nav ul li.active a {
-    background: #fff;
-    color: #e64d49; }
+    background: rgba(0,0,0,0.2); }
 .sub-navigation .sub-nav-newsletter {
     display: none;
     float: right;
