--- a/wp-content/themes/makers/style.css
+++ b/wp-content/themes/makers/style.css
@@ -716,8 +716,7 @@ video {
     float: left;
     display: block;
     width: 100%;
-    margin: 1.25rem 0 0;
-    padding: 0.625rem; }
+    margin: 1.25rem 0 0; }
 .container .list-3 li:last-child {
     margin-right: 0; }
 .container .list-3 li:nth-child(2n) {
