--- a/wp-content/themes/makers/style.css
+++ b/wp-content/themes/makers/style.css
@@ -371,7 +371,7 @@ video {
     display: block; }
 .header .navigation .main-navigation a.active {
     background-color: rgba(0,0,0,0.2); }
-.header .navigation .main-navigation .join-us a {
+/*.header .navigation .main-navigation .join-us a {
     background-image: url("images/icons/icon-join-us.png");
     background-repeat: no-repeat;
     background-position: right 10px center;
@@ -379,9 +379,7 @@ video {
     padding-right: 45px; }
 @media screen and (min-width: 40rem) {
     .header .navigation .main-navigation .join-us a {
-        background-size: 26px 26px; } }
-.header .navigation .main-navigation .join-us a:hover {
-    background-color: rgba(0,0,0,0.2) }
+        background-size: 26px 26px; } }*/
 .header .social-container {
     display: none;
     float: right;
@@ -404,7 +402,7 @@ video {
     .home .hero img {
         width: auto;
         height: auto;
-        min-height: 600px;
+        min-height: 540px;
         min-width: 100%; } }
 
 .hero {
@@ -426,11 +424,11 @@ video {
     width: auto; }
 @media screen and (min-width: 40rem) {
     .hero {
-        min-height: 600px;
+        min-height: 540px;
     }
     .hero img {
         width: auto;
-        min-height: 600px; } }
+        min-height: 540px; } }
 .hero h2 {
     color: #fff;
     font-family: "Montserrat", "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -900,15 +898,14 @@ video {
     right: 0;
     bottom: 0;
     left: 0;
-    background: rgba(241, 90, 87, 0.5);
-    display: none; }
+    display: block; }
 .container .posts > li .team-hover h4 {
     color: #fff;
-    font-size: 15px;
+    font-size: 16px;
     margin: 0.3125rem 0; }
 .container .posts > li .team-hover p {
     color: #fff;
-    font-size: 12px;
+    font-size: 13px;
     margin: 0; }
 .container .posts > li .team-hover .table-cell {
     padding: 0.625rem;
@@ -916,7 +913,7 @@ video {
     vertical-align: bottom; }
 .container .posts > li .team-hover .social li {
     margin-top: 0.625rem;
-    padding: 0 0.375rem; }
+    padding: 0; }
 .container .posts > li .team-hover .social li a {
     background-size: 1.25rem 1.25rem;
     height: 1.5rem;
@@ -1029,7 +1026,13 @@ video {
     text-align: center; }
 .container .companies-grid li:last-child {
     margin-right: 0; }
-@media screen and (min-width: 40rem) {
+    @media screen and (min-width: 53.75rem) {
+    .container .companies-grid li {
+        float: left;
+        display: block;
+        margin-right: 2.35765%;
+        width: 48.64235%; } }
+@media screen and (min-width: 72.5rem) {
     .container .companies-grid li {
         float: left;
         display: block;
@@ -1186,13 +1189,13 @@ video {
 .grid .build a:hover,
 .grid .scale a:hover {
     background-color: #262626;
-    color: #fff; }
+    color: #fff; }*/
 .grid .labs a:hover {
     background-color: #3BC999;
 }
 .grid .makers a:hover {
     background-color: #E64D49;
-}*/
+}
 .grid .labs,
 .grid .makers {
     height: auto;
@@ -1222,7 +1225,7 @@ video {
 .grid .build,
 .grid .scale {
     background-color: #f5f5f5;
-    border-top: 1px solid #e7e7e7;
+    border-bottom: 1px solid #e7e7e7;
     height: 21.875rem; }
 @media screen and (min-width: 40rem) {
     .grid .identify,
@@ -1236,7 +1239,6 @@ video {
     .grid .build,
     .grid .scale {
         border-left: 1px solid #e7e7e7;
-        border-bottom: 1px solid #e7e7e7;
         height: 15.625rem;
         width: 50%; } }
 /*.grid .identify a,
