--- a/wp-content/themes/makers/style.css
+++ b/wp-content/themes/makers/style.css
@@ -730,6 +730,9 @@ video {
         display: block;
         margin-right: 2.35765%;
         width: 31.76157%; }
+    .container .list-3 li:nth-child(2n) {
+        margin-right: 0;
+    }
     .container .list-3 li:nth-child(2n+1) {
         clear: none; }
     .container .list-3 li:last-child {
