--- a/wp-content/themes/makers/style.css
+++ b/wp-content/themes/makers/style.css
@@ -730,9 +730,6 @@ video {
         display: block;
         margin-right: 2.35765%;
         width: 31.76157%; }
-    .container .list-3 li:nth-child(2n) {
-        margin-right: 0;
-    }
     .container .list-3 li:nth-child(2n+1) {
         clear: none; }
     .container .list-3 li:last-child {
@@ -1030,7 +1027,10 @@ video {
         float: left;
         display: block;
         margin-right: 2.35765%;
-        width: 48.64235%; } }
+        width: 48.64235%; }
+    .container .companies-grid li:nth-child(2n) {
+        margin-right: 0;
+        } }
 @media screen and (min-width: 72.5rem) {
     .container .companies-grid li {
         float: left;
