--- a/wp-content/themes/makers/style2.css
+++ b/wp-content/themes/makers/style2.css
@@ -583,3 +583,131 @@
 @media screen and (min-width: 72.5rem) {
 
 }
+
+
+
+/**
+ * Steps
+ */
+
+.steps {
+    position: relative;
+}
+
+.steps:before,
+.steps:after {
+    content: " ";
+    display: table;
+}
+
+.steps:after {
+    clear: both;
+}
+
+.steps-item {
+    color: #3e3e3e;
+}
+
+.steps-item a {
+    color: inherit;
+    vertical-align: middle;
+    display: table-cell;
+}
+
+.steps-item {
+    display: table;
+    height: 21.875rem;
+    background-color: #f5f5f5;
+    border-bottom: 1px solid #e7e7e7;
+}
+
+.steps-intro {
+    position: relative;
+}
+
+.steps-intro h3 {
+    font-size: 24px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    right: 0;
+    text-align: center;
+    color: #fff;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.steps-image {
+    height: auto;
+    width: 100%;
+}
+
+.steps-icon {
+    display: table-cell;
+    width: 35%;
+    vertical-align: middle;
+    text-align: center;
+}
+
+.steps-icon img {
+    margin-bottom: 1.25rem;
+}
+
+.steps-text {
+    padding: 1rem 2rem 1rem 0;
+    display: table-cell;
+    width: 65%;
+}
+
+.steps-more {
+    font-size: 15px;
+    margin-top: 0.625rem;
+    color: #e64d49;
+    font-family: "Merriweather", Georgia, "Times New Roman", Times, serif;
+    font-style: italic;
+}
+
+.steps-intro .overlay {
+    transition: background .4s ease-in-out;
+}
+
+.steps-step--labs:hover .overlay {
+    background-color: #3BC999;
+}
+
+.steps-step--makers:hover .overlay {
+    background-color: #E64D49;
+}
+
+@media screen and (min-width: 40rem) {
+
+}
+
+@media screen and (min-width: 53.75rem) {
+    .steps-step {
+        float: left;
+        width: 50%;
+    }
+
+    .steps-item {
+        transition: background .4s, border .4s ease-in-out;
+    }
+
+    .steps-step--labs .steps-item {
+        border-right: 1px solid #e7e7e7;
+    }
+
+    .steps-step--makers .steps-item {
+        border-left: 1px solid #e7e7e7;
+    }
+
+    .steps-step:hover .steps-item {
+        background-color: #e7e7e7;
+        border-color: #DAD9D9;
+    }
+}
+
+@media screen and (min-width: 72.5rem) {
+
+}
